## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

MAINT_CHARSET = latin1


EXTRA_DIST = config.rpath  autogen.sh \
             contribs \
             COPYING \
             ChangeLog \
             README \
             TODO
	     
SUBDIRS = intl po m4 src doc

CLEANFILES = *~


