dnl Process this file with autoconf to produce a configure script.

# Initialization
AC_INIT(Makefile.am)
AM_CONFIG_HEADER(config.h)

# Determine the host and build type. The target is always a PIC.
AC_CANONICAL_HOST

AM_INIT_AUTOMAKE(hddtemp, 0.3-beta7)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# append the host alias to the tools for cross compiling
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

dnl internationalization macros
AM_GNU_GETTEXT

# Substitute configuration variables
AC_OUTPUT(
Makefile \
intl/Makefile \
po/Makefile.in \
m4/Makefile \
src/Makefile \
doc/Makefile \
)

AC_MSG_RESULT([

hddtemp-$VERSION is now configured for $canonical_host_type

  Build:                $build
  Host:                 $host
  Source directory:     $srcdir
  Installation prefix:  $prefix
  C compiler:           $CC $CFLAGS
  
])
